src/test/ui/associated-types/bound-lifetime-in-binding-only.elision.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/bound-lifetime-in-binding-only.rs:52:23
   |
LL | fn elision<T: Fn() -> &i32>() {
   |                       ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime
   |
LL | fn elision<T: Fn() -> &'static i32>() {
   |                       ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
